<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bg"
                android:paddingLeft="@dimen/spacing_medium_56"
                android:paddingRight="@dimen/spacing_medium_56"
                tools:context="com.softdesign.devintensive.ui.activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white">

        <View
            android:layout_width="@dimen/size_small_3"
            android:layout_height="@dimen/size_normal_24"
            android:layout_marginTop="@dimen/spacing_normal_32"
            android:background="@color/color_accent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_normal_24"
            android:paddingBottom="@dimen/spacing_normal_24"
            android:paddingLeft="@dimen/spacing_normal_24"
            android:paddingRight="@dimen/spacing_normal_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/font_medium_20"
                android:textColor="@color/color_accent"
                android:text="@string/label_start_login"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/edit_text"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/edit_text"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_24"
                android:paddingTop="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_16"
                android:paddingLeft="@dimen/spacing_normal_32"
                android:paddingRight="@dimen/spacing_normal_32"
                android:backgroundTint="@color/color_accent"
                android:textColor="@color/white"
                android:text="@string/label_start_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:fontFamily="sans-serif-medium"
                android:text="@string/label_login_forget_password"
                android:textColor="@color/gray_light"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>