<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/size_small_2"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.view.AspectRatioImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/header_bg"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Фамилия Имя"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/font_large_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_24"
                android:layout_gravity="bottom"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medium_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="@dimen/size_null"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rating"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/size_null"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_code_lines"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/size_null"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_projects"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_light"
            android:text="@string/hint_about_me"
            android:maxLines="3"
            android:paddingRight="@dimen/spacing_normal_16"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/font_normal_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_small_1"
            android:background="@color/gray_light"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_watch"
            android:textColor="@color/color_accent"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:layout_gravity="center"/>
    </LinearLayout>
</android.support.v7.widget.CardView>