<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/gray_background"
                 tools:context=".ui.activities.AuthActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/authorization_box"
            android:layout_width="@dimen/size_extra_large_240"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/size_small_2"
            app:cardElevation="@dimen/size_small_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_normal_32">

                    <View
                        android:id="@+id/login_indicator"
                        android:layout_width="@dimen/size_small_4"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/spacing_normal_20"
                        android:background="@color/color_accent"/>

                    <TextView
                        android:id="@+id/login_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/label_start_login"
                        android:textAllCaps="true"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/font_medium_20"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_normal_24"
                    android:paddingLeft="@dimen/spacing_normal_24"
                    android:paddingRight="@dimen/spacing_normal_24">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrap_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/gray"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/font_normal_14"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrap_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textColor="@color/gray"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/font_normal_14"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/AppTheme.Button.Green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:minWidth="@dimen/size_large_126"
                        android:text="@string/label_start_login"
                        android:textAllCaps="true"
                        android:theme="@style/AppTheme.Button.Green"/>

                    <TextView
                        android:id="@+id/remember_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/label_login_forget_password"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/font_normal_14"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>